--- a/scss/partials/_contacto.scss
+++ b/scss/partials/_contacto.scss
@@ -1,3 +1,18 @@
+.inicio-contacto{
+    background-color: bisque;
+    padding-bottom: 10px;
+    padding-right: 20px;
+}
+
+.boton-contacto{
+  text-align: center;
+  margin-bottom: 50px;
+  text-decoration: none;
+  border-radius: 8px;
+}
+
+
+
 .titulo-contacto {
     text-align: center;
     font-size: 25px;
@@ -6,23 +21,4 @@
 }
 
 
-.enviar {
-    margin-bottom: 10px;
-    text-align: center;
-}
 
-
-.img-contacto {
-    text-align: center;
-
-}
-
-.texto-contacto {
-    text-align: center;
-    padding-top: 25px;
-    padding-bottom: 25px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 200px;
-}
