--- a/scss/partials/_footer.scss
+++ b/scss/partials/_footer.scss
@@ -1,7 +1,13 @@
+@import "../base/variables";
+
 footer {
     text-align: center;
-    background-image: linear-gradient(to right top, #16d4c8, #00c7df, #00b7f5, #00a3ff, #0089ff, #008cff, #008eff, #0091ff, #00b1ff, #00ccff, #00e5fd, #5ffbf1);
+    background-color: $colorPrimario;
     font-family: 'Varela Round', sans-serif;
     padding-bottom: 2px;
-    
+
+    .redes-sociales{
+        margin: 10px;
+        display: inline-block;
+    }
 }
