--- a/scss/partials/_quienes-somos.scss
+++ b/scss/partials/_quienes-somos.scss
@@ -1,9 +1,11 @@
+@import "../base/variables";
+
 .nosotros {
     margin: auto;
     font-size: 40px;
     padding: 30px;
     text-align: center;
-    background-color: bisque;
+    background-color:  $colorSecundario;
 
 }
 
@@ -15,18 +17,29 @@
     font-size: 23px;
     border-radius: 15px;
     border: 10px solid rgb(0, 0, 0);
-    background-image: linear-gradient(to right top, #16d4c8, #00c7df, #00b7f5, #00a3ff, #0089ff, #008cff, #008eff, #0091ff, #00b1ff, #00ccff, #00e5fd, #5ffbf1);
+    background-color: $colorPrimario;
     padding: 20px;
-    display: flex;
-   
+    display: flex;   
 }
 
 .nosotros-fondo {
-    background-color: bisque;
+    background-color:  $colorSecundario;
+
+    .img-nosotros{
+        width: 35%;
+        height: 35%;
+    
+    }
+   
 }
 
-.img-nosotros {
-    width: 25%;
-    height: 25%;
+@media (min-width:400px) and (max-width:700px){
 
+.texto-nosotros{
+    font-size: 15px;
+  
+  }
+
+  
 }
+
