--- a/estilos/style.css
+++ b/estilos/style.css
@@ -27,6 +27,7 @@
       grid-template-rows: 1fr;
       gap: 15px;
       margin-top: 25px;
+      font-family: 'Roboto Slab', serif;
       font-size: 25px; }
 
 .inicio {
@@ -73,11 +74,12 @@ b:hover {
   margin-top: 10px;
   margin: auto;
   font-size: 20px;
-  background-color: #faedcd; }
+  background-color: #faedcd;
+  font-family: 'Rubik', sans-serif; }
   .productos-titulo .productos-comprar {
     text-align: center;
     margin: 50px;
-    font-family: 'Varela Round', sans-serif; }
+    font-family: 'Roboto Slab', serif; }
 
 .card {
   border-radius: 15px;
@@ -121,7 +123,8 @@ b:hover {
   .inicio-contacto .titulo-contacto {
     text-align: center;
     font-size: 25px;
-    padding: 30px; }
+    padding: 30px;
+    font-family: 'Rubik', sans-serif; }
 
 .boton-contacto {
   text-align: center;
@@ -146,7 +149,8 @@ b:hover {
   padding-top: 10px;
   background-color: #faedcd;
   border-radius: 50px;
-  text-align: center; }
+  text-align: center;
+  font-family: 'Rubik', sans-serif; }
 
 .fondo-tips {
   background-color: #faedcd; }
