--- a/scss/partials/_contacto.scss
+++ b/scss/partials/_contacto.scss
@@ -10,6 +10,7 @@
       text-align: center;
       font-size: 25px;
       padding: 30px;
+      font-family: 'Rubik', sans-serif;
   
   }
 
@@ -29,6 +30,7 @@
 
     .formulario-nombre{
       border: 5px ridge $colorPrimario;
+      
       
     }
 }
