--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -25,6 +25,7 @@
             gap: 15px;
             margin-top: 25px;
            @extend .borde-basico;
+           font-family: 'Roboto Slab', serif;
             font-size: 25px;
         }
         
