--- a/scss/partials/_tips.scss
+++ b/scss/partials/_tips.scss
@@ -10,6 +10,7 @@
     background-color: $colorSecundario;
     border-radius: 50px;
     text-align: center;
+    font-family: 'Rubik', sans-serif;
 
 }
 
