cambios de alt, bordes, colores y botones

--- a/scss/partials/_contacto.scss
+++ b/scss/partials/_contacto.scss
@@ -8,9 +8,10 @@
 
     .titulo-contacto {
       text-align: center;
-      font-size: 25px;
+      font-size: 35px;
       padding: 30px;
       font-family: 'Rubik', sans-serif;
+      text-shadow: 1px 1px 2px rgb(255, 230, 0);
   
   }
 
