--- a/scss/partials/_productos.scss
+++ b/scss/partials/_productos.scss
@@ -10,6 +10,7 @@
     font-size: 20px;
     background-color: $colorSecundario;
     font-family: 'Rubik', sans-serif;
+    text-shadow: 1px 1px 2px rgb(255, 230, 0);
 
 .productos-comprar {
         text-align: center;
