--- a/scss/partials/_tips.scss
+++ b/scss/partials/_tips.scss
@@ -8,6 +8,10 @@
     padding: 10px;
     font-family: 'Rubik', sans-serif;
 
+    .titulo-tips{
+        text-shadow: 1px 1px 2px rgb(255, 230, 0);
+    }
+
 }
 
         .fondo-tips {
@@ -16,7 +20,7 @@
 
             .tips-videos {
                 padding-top: 15px;
-                margin-bottom: 10px;
+                margin-bottom: 30px;
                 margin-left: 105px;
                 
                 .videos {
