--- a/estilos/style.css
+++ b/estilos/style.css
@@ -6,7 +6,8 @@
 .borde-basico, .subtitulo .seccioncentral .productos-inicio, .productos-titulo .productos-comprar {
   border-radius: 20px;
   padding: 15px;
-  background-color: #48cae4; }
+  background-color: #ffbd00;
+  box-shadow: 0px 10px 10px black; }
 
 .header {
   display: flex;
@@ -15,7 +16,7 @@
   padding: 30px; }
 
 .subtitulo {
-  background-color: #faedcd;
+  background-color: #84dcc6;
   text-align: center;
   padding: 10px;
   font-size: 15px; }
@@ -34,7 +35,7 @@
   width: 550px;
   height: 350px;
   border-radius: 15px;
-  border: 10px solid #099696;
+  border: 10px solid #ffbd00;
   margin-top: 25px; }
 
 .comprar {
@@ -50,6 +51,9 @@
 b:hover {
   color: white;
   cursor: pointer; }
+
+.titulo-texto {
+  text-shadow: 1px 1px 2px #ffe600; }
 
 /* acomodar las areas */
 @media (min-width: 400px) and (max-width: 500px) {
@@ -70,7 +74,8 @@ b:hover {
 .borde-basico, .subtitulo .seccioncentral .productos-inicio, .productos-titulo .productos-comprar {
   border-radius: 20px;
   padding: 15px;
-  background-color: #48cae4; }
+  background-color: #ffbd00;
+  box-shadow: 0px 10px 10px black; }
 
 .productos-titulo {
   text-align: center;
@@ -78,8 +83,9 @@ b:hover {
   margin-top: 10px;
   margin: auto;
   font-size: 20px;
-  background-color: #faedcd;
-  font-family: 'Rubik', sans-serif; }
+  background-color: #84dcc6;
+  font-family: 'Rubik', sans-serif;
+  text-shadow: 1px 1px 2px #ffe600; }
   .productos-titulo .productos-comprar {
     text-align: center;
     margin: 50px;
@@ -87,7 +93,7 @@ b:hover {
 
 .card {
   border-radius: 15px;
-  border: 10px solid #099696;
+  border: 10px solid #ffbd00;
   display: inline-block;
   margin: 25px; }
 
@@ -96,22 +102,24 @@ b:hover {
   font-size: 35px;
   padding: 30px;
   text-align: center;
-  background-color: #faedcd; }
+  background-color: #84dcc6;
+  text-shadow: 1px 1px 2px #ffe600; }
 
 .texto-nosotros {
   margin: 10px;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
   margin-left: 50px;
   margin-right: 50px;
-  font-size: 23px;
+  font-size: 20px;
   border-radius: 15px;
   border: 10px solid black;
-  background-color: #48cae4;
+  box-shadow: 0px 10px 10px #fffb01;
+  background-color: #ffbd00;
   padding: 20px;
   display: flex; }
 
 .nosotros-fondo {
-  background-color: #faedcd; }
+  background-color: #84dcc6; }
   .nosotros-fondo .img-nosotros {
     width: 35%;
     height: 35%; }
@@ -125,14 +133,15 @@ b:hover {
     font-size: 10px; } }
 
 .inicio-contacto {
-  background-color: #faedcd;
+  background-color: #84dcc6;
   padding-bottom: 10px;
   padding-right: 20px; }
   .inicio-contacto .titulo-contacto {
     text-align: center;
-    font-size: 25px;
+    font-size: 35px;
     padding: 30px;
-    font-family: 'Rubik', sans-serif; }
+    font-family: 'Rubik', sans-serif;
+    text-shadow: 1px 1px 2px #ffe600; }
 
 .boton-contacto {
   text-align: center;
@@ -143,29 +152,32 @@ b:hover {
 .formulario {
   margin: 20px; }
   .formulario .formulario-nombre {
-    border: 5px ridge #48cae4; }
+    border: 5px ridge #ffbd00; }
 
 .borde-basico, .subtitulo .seccioncentral .productos-inicio, .productos-titulo .productos-comprar {
   border-radius: 20px;
   padding: 15px;
-  background-color: #48cae4; }
+  background-color: #ffbd00;
+  box-shadow: 0px 10px 10px black; }
 
 .titulo {
   text-align: center;
   font-size: 15px;
   padding: 10px;
   font-family: 'Rubik', sans-serif; }
+  .titulo .titulo-tips {
+    text-shadow: 1px 1px 2px #ffe600; }
 
 .fondo-tips {
-  background-color: #faedcd; }
+  background-color: #84dcc6; }
   .fondo-tips .tips-videos {
     padding-top: 15px;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
     margin-left: 105px; }
     .fondo-tips .tips-videos .videos {
       margin: 2px;
       border-radius: 15px;
-      border: 10px solid #099696; }
+      border: 10px solid #ffbd00; }
 
 @media (min-width: 400px) and (max-width: 670px) {
   .videos {
@@ -188,7 +200,7 @@ b:hover {
 
 footer {
   text-align: center;
-  background-color: #48cae4;
+  background-color: #ffbd00;
   font-family: 'Varela Round', sans-serif;
   padding-bottom: 2px; }
   footer .redes-sociales {
@@ -198,4 +210,5 @@ footer {
 .borde-basico, .subtitulo .seccioncentral .productos-inicio, .productos-titulo .productos-comprar {
   border-radius: 20px;
   padding: 15px;
-  background-color: #48cae4; }
+  background-color: #ffbd00;
+  box-shadow: 0px 10px 10px black; }
