--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -14,6 +14,7 @@
     text-align: center;
     padding: 10px;
     font-size: 15px;
+    
 
     .seccioncentral{
         justify-items: center;
@@ -27,6 +28,8 @@
            @extend .borde-basico;
            font-family: 'Roboto Slab', serif;
             font-size: 25px;
+           
+            
         }
         
     }
@@ -58,6 +61,10 @@ b:hover {
     cursor: pointer;
 }
 
+
+.titulo-texto{
+    text-shadow: 1px 1px 2px rgb(255, 230, 0);
+}
 
 /* acomodar las areas */
 @media  (min-width:400px) and (max-width:500px) {
