--- a/scss/partials/_quienes-somos.scss
+++ b/scss/partials/_quienes-somos.scss
@@ -6,23 +6,24 @@
     padding: 30px;
     text-align: center;
     background-color:  $colorSecundario;
-    
-
+    text-shadow: 1px 1px 2px rgb(255, 230, 0);
 }
 
 .texto-nosotros {
     margin: 10px;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
     margin-left: 50px;
     margin-right: 50px;
-    font-size: 23px;
+    font-size: 20px;
     border-radius: 15px;
     border: 10px solid rgb(0, 0, 0);
+    box-shadow: 0px 10px 10px rgb(255, 251, 1);
     background-color: $colorPrimario;
     padding: 20px;
     display: flex;   
-    
 }
+
+
 
 .nosotros-fondo {
     background-color:  $colorSecundario;
