--- a/estilos/style.css
+++ b/estilos/style.css
@@ -15,6 +15,9 @@
   flex-direction: column-reverse;
   padding: 30px; }
 
+.titulo-texto {
+  text-shadow: 1px 1px 2px #ffe600; }
+
 .subtitulo {
   background-color: #84dcc6;
   text-align: center;
@@ -44,16 +47,12 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-  border-radius: 8px;
   margin: 5px;
-  color: black; }
+  margin-top: 10px; }
 
 b:hover {
   color: white;
   cursor: pointer; }
-
-.titulo-texto {
-  text-shadow: 1px 1px 2px #ffe600; }
 
 /* acomodar las areas */
 @media (min-width: 400px) and (max-width: 500px) {
@@ -84,12 +83,14 @@ b:hover {
   margin: auto;
   font-size: 20px;
   background-color: #84dcc6;
-  font-family: 'Rubik', sans-serif;
-  text-shadow: 1px 1px 2px #ffe600; }
+  font-family: 'Rubik', sans-serif; }
   .productos-titulo .productos-comprar {
     text-align: center;
     margin: 50px;
     font-family: 'Roboto Slab', serif; }
+
+.seccion-producto {
+  text-shadow: 1px 1px 2px #ffe600; }
 
 .card {
   border-radius: 15px;
@@ -111,9 +112,9 @@ b:hover {
   margin-left: 50px;
   margin-right: 50px;
   font-size: 20px;
-  border-radius: 15px;
+  border-radius: 10px;
   border: 10px solid black;
-  box-shadow: 0px 10px 10px #fffb01;
+  box-shadow: -2px 2px 10px 10px #fffb01;
   background-color: #ffbd00;
   padding: 20px;
   display: flex; }
