--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -9,6 +9,11 @@
    padding: 30px;
 }
 
+
+.titulo-texto{
+    text-shadow: 1px 1px 2px rgb(255, 230, 0);
+}
+
 .subtitulo {
     background-color:  $colorSecundario;
     text-align: center;
@@ -50,9 +55,10 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    border-radius: 8px;
     margin: 5px;
-    color: black;
+    margin-top: 10px;
+    
+    
 
 }
 
@@ -62,9 +68,7 @@ b:hover {
 }
 
 
-.titulo-texto{
-    text-shadow: 1px 1px 2px rgb(255, 230, 0);
-}
+
 
 /* acomodar las areas */
 @media  (min-width:400px) and (max-width:500px) {
