--- a/scss/partials/_quienes-somos.scss
+++ b/scss/partials/_quienes-somos.scss
@@ -15,9 +15,9 @@
     margin-left: 50px;
     margin-right: 50px;
     font-size: 20px;
-    border-radius: 15px;
+    border-radius: 10px;
     border: 10px solid rgb(0, 0, 0);
-    box-shadow: 0px 10px 10px rgb(255, 251, 1);
+    box-shadow: -2px 2px 10px 10px rgb(255, 251, 1);
     background-color: $colorPrimario;
     padding: 20px;
     display: flex;   
